* Fixed error warning excess aesthetic
* Fixed issue w/ theme, where element blank was being ignored.
* Mean Ellipses Geomery. Thanks to Ashton Drew from KDV Decision Analysis for requesting this.
* Fixed inheritence of ternary ticks (tern.axis.ticks), which previousl inherited from axis.line, when it really should inherit from axis.ticks.

ggtern 2.2.0
----------------------------------------------------------------
* Tidied up strip_unnaproved function
* Removed hidden functions no longer used
* Fixed ggproto modifications, plot build, plot construction and ternary scales
* Documentation Improvements

ggtern 2.1.5
----------------------------------------------------------------
* Fixed bug to do with theme element rendering, some properties were being ignored (Thanks to Ivan Galvan for picking up on this)
* Created new theme element, and convenience functions, to enable or disable the parsing of text objects into expressions using latex markup. Previously, the parsing was done by default, however now, they are rendered without parsing unless the user states that they wish it to be parsed via the 'tern.plot.latex' theme element, or theme_latex() convenience functions.
* Improved the logic in handling the breaks / minor breaks and labels when they are to be calculated automatically.
* Reworked the theme_mesh function, to now accept an ellipsis term, which is passed through to limits_tern. By this token, theme_mesh now works over a restricted plotting region.
* Improved logic of the getBreaks function, when determining minor breaks
* Fixed bug in validate_element, when validating plot.margin theme elements, thanks to Degang Wu for picking up the problem
* Eliminated some masked functions (theme_get, theme_set), reverting back to the ggplot2 originals.
* Fixed bug with normalisation of data for errorbars, thanks to Andy London for picking up the issue.
* Added new custom themes: theme_matrix, theme_tropical, theme_bluedark, theme_bluelight