@@ -15,6 +15,7 @@ export(GeomErrorbarl)
 export(GeomErrorbarr)
 export(GeomErrorbart)
 export(GeomInterpolateTern)
+export(GeomLabelViewport)
 export(GeomLisoprop)
 export(GeomLline)
 export(GeomLmark)
@@ -26,6 +27,7 @@ export(GeomRisoprop)
 export(GeomRline)
 export(GeomRmark)
 export(GeomSmoothTern)
+export(GeomTextViewport)
 export(GeomTisoprop)
 export(GeomTline)
 export(GeomTmark)
@@ -85,10 +87,12 @@ export(geom_errorbarL)
 export(geom_errorbarR)
 export(geom_errorbarT)
 export(geom_interpolate_tern)
+export(geom_label_viewport)
 export(geom_mask)
 export(geom_mean_ellipse)
 export(geom_point_swap)
 export(geom_smooth_tern)
+export(geom_text_viewport)
 export(getBreaks)
 export(getLabels)
 export(ggplot)
