@@ -6,6 +6,7 @@ ggtern 2.2.1
 * Fixed issue w/ theme, where element blank was being ignored.
 * Mean Ellipses Geomery. Thanks to Ashton Drew from KDV Decision Analysis for requesting this.
 * Fixed inheritence of ternary ticks (tern.axis.ticks), which previousl inherited from axis.line, when it really should inherit from axis.ticks.
+* New Labelling Geometries, geom_text_viewport and geom_label_viewport, for positioning text and labels at fractional coordinates relative to the panel viewport.
 
 ggtern 2.2.0
 ----------------------------------------------------------------
